# CookingBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  filters.py  people.db  pyproject.toml  requirements.txt  routers.py  states.py  utils.py
bot/: bot.py  main.py
bot/callbacks/: __init__.py  admin.py  user.py
bot/constants/: factory.py
bot/database/: connection.py  models.py  redis_client.py
bot/database/postgres_container/: init.sql
bot/handlers/: __init__.py
bot/handlers/admin/: commands.py  state_process.py
bot/handlers/user/: commands.py  (+1 more)
bot/keyboards/: __init__.py  builders.py  factories.py  inline.py  reply.py
bot/misc/: config.py  filters.py  routers.py  utils.py
callbacks/: __init__.py  admin.py  user.py
constants/: button_text.py  callback.py
database/: connection.py  create_db.sql  db.sqlite3  models.py  redis_client.py
database/architecture [drawio]/: Untitled Diagram.drawio
database/postgres_container/: botdb_backup.sql
handlers/: __init__.py  admin.py  state_process.py  user.py
handlers/admin/: __init__.py  commands.py  state_process.py
handlers/user/: __init__.py  commands.py  state_process.py
keyboards/: __init__.py  builders.py  button_text.py  callback_constants.py  constants.py  factories.py  factory_constants.py  inline.py  reply.py
misc/: config.py  filters.py  middlewares.py  routers.py  states.py  utils.py
ui/: main.py  routes.py
ui/middlewares/: app_middleware.py  url_middleware.py
ui/views/: index_view.py  next_view.py
utils/: BotArchitecture.drawio
(+13 files in other folders)
